# stskit

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  README.md  anlage.py  anschlussmatrix.py  auswertung.py  bildfahrplan.py  database.py  einausfahrten.py  einfahrplan.py  fahrplan.py  gleisbelegung.py  gleisnetz.py  main.py  matplotlibrc  mkdocs.yml  model.py  planung.py  pyproject.toml  qticker.py  requirements-dev.txt  requirements.txt  resources_rc.py  slotgrafik.py  stscharts.py  stscharts.spec  stsdispo.py  stsdispo.spec  stskit_main.spec  stsobj.py  stsplugin.py  test_auswertung.py  ticker.py  zensical.toml  zentrale.py  zugtabelle.py
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/workflows/: build-standalone.yml  docs.yml  release.yml
docs/: bahnhofgraph.puml  datenfluss.puml  dispo-abfahrt-abwarten.puml  dispo-ankunft-abwarten.puml  dispo-folgen.puml  dispo-kreuzung.puml  dispo-sequenz.puml  dispo-verschieben.puml  durchfahrt-ereignis.puml  ersatz-ereignis.puml  ersatzzug.puml  fluegelung-ereignis.puml  fluegelung.puml  gen_pages.py  index.md  kupplung-ereignis.puml  kupplung.puml  manuell.puml  planhalt-ereignis.puml  planhalt.puml
docs/de/: anschlussmatrix.md  bahnhofdefinition.md  configuration.md  dispo.md  ein-ausfahrten.md  einstellungen.md  faq.md  gleisbelegung.md  glossar.md  index.md  installation.md  rangierplan.md  reference.md  streckendefinition.md  streckenfahrplan.md  zugfahrplan.md
docs/en/: index.md  installation.md
docs/interna/: stsgraph.md  stsobj.md  stsplugin.md
docs/javascripts/: mermaid-zoom.js
docs/stylesheets/: extra.css  mermaid-zoom.css
qt/: anschlussmatrix.ui  bildfahrplan.ui  dark.css  fahrplan.ui  gleisbelegung.ui  qt.pro  resources.qrc  ui_anschlussmatrix.py  ui_bildfahrplan.py  ui_gleisbelegung.py
research/: anlage.puml
stskit/: __main__.py  anlage.py  anschlussmatrix.py  auswertung.py  bildfahrplan.py  einstellungen.py  fahrplan.py  gleisbelegung.py  gleisnetz.py  planung.py  qticker.py  resources_rc.py  slotgrafik.py  stsobj.py  stsplugin.py  ticker.py  zentrale.py  zielgraph.py  zugschema.py
stskit/config/: 1008.json  1009.json  102.json  1028.json  1037.json  1047.json  106.json  1085.json  111.json  1111.json  1113.json  117.json  1180.json  1186.json  12.json  1203.json  1220.json  1244.json  1254.json  126.json  129.json  133.json  1335.json  137.json  140.json  1401.json  142.json  146.json  1511.json  153.json  158.json  1590.json  16.json  165.json  1661.json  168.json  182.json  19.json  194.json  195.json  (+170 more)
stskit/dispo/: anlage.py  auswertung.py  betrieb.py  config.py  prognose.py
stskit/graphs/: bahnhofgraph.py  ereignisgraph.py  graphbasics.py  liniengraph.py  signalgraph.py  zielgraph.py  zuggraph.py
stskit/interface/: stsgraph.py  stsobj.py  stsplugin.py
stskit/model/: bahnhofgraph.py  ereignisgraph.py  gleisschema.py  journal.py  liniengraph.py  signalgraph.py  zielgraph.py  zuggraph.py  zugschema.py
stskit/plots/: anschlussmatrix.py  bildfahrplan.py  (+3 more)
tests/: test_anlage.py  test_auswertung.py  test_bahnhofgraph.py  test_betrieb.py  test_dispo_anlage.py  test_ereignisgraph.py  test_gleisbelegung.py  test_gleisnamen.py  test_gleisschema.py  test_liniengraph.py  test_planung.py  test_stsobj.py
(+62 files in other folders)
