[project]
name = "stskit"
version = "2.0.0"
description = "stskit - graphical timetables plugin for Stellwerksim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "jsonschema>=4.23.0",
    "matplotlib>=3.10.1",
    "mock>=5.2.0",
    "netgraph>=4.13.2",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pyside6>=6.9.1",
    "trio>=0.30.0",
    "untangle>=1.2.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-static-i18n[material]>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "nuitka>=2.7.7",
    "ruff>=0.14.10",
]

[tool.uv]
python-preference = "only-managed"

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "COM", "E", "F", "PLC", "PLE", "W", "YTT"]
# select = ["A", "ASYNC", "B", "COM", "E", "F", "PLC", "PLE", "RUF", "W", "YTT"]
ignore = ["A001", "A002", "B007", "B008", "B904", "B905", "F401", "F821", "F841", "E501", "E741", "PLC0206", "W291", "W293"]
