[project]
name = "stskit"
version = "2.0.0"
description = "stskit - graphical timetables plugin for Stellwerksim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "jsonschema>=4.23.0",
    "matplotlib>=3.10.1",
    "mock>=5.2.0",
    "netgraph>=4.13.2",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pyside6>=6.9.1",
    "trio>=0.30.0",
    "untangle>=1.2.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-static-i18n[material]>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "nuitka>=2.7.7",
    "pynose>=1.5.5",
    "ruff>=0.14.10",
    "ty>=0.0.15",
]

[tool.uv]
# python-preference = "only-managed"

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "E", "F", "PLC", "PLE", "W", "YTT"]
# select = ["A", "ASYNC", "B", "COM", "E", "F", "PLC", "PLE", "RUF", "W", "YTT"]
ignore = ["A001", "A002", "B007", "B008", "B904", "B905", "F401", "F821", "F841", "E501", "E741", "PLC0206", "W291", "W293"]

[tool.ty.rules]
# todo: enable rules one by one and fix errors!
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
#invalid-context-manager = "ignore"
invalid-method-override = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
#missing-argument = "ignore"
#no-matching-overload = "ignore"
#not-iterable = "ignore"
#not-subscriptable = "ignore"
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
unresolved-reference = "ignore"
#unsupported-operator = "ignore"

[tool.ty.src]
include = [
    "stskit",
#    "tests",
]
